--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
             <span class="navbar-brand mb-0 h1">Sam's Budget App</span>
         </nav>
 
-    <div class="information" id="contact-info">
+    <div style.display="block" class="information" id="contact-info">
         <form>
             First Name:<br>
-        <input type="text" name="firstname"><br>
+        <input type="text" name="firstname" id="first"><br>
             Last Name:<br>
         <input type="text" name="lastname">
         </form>
     </div>
-<button id="submit_contact">Continue</button>
+<button onclick="myFunction()" id="submit_contact">Continue</button>
 
    
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
